--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
     "root": true,
     "extends": "next",
     "rules": {
+       "plugin":[ 
+            "react/recommended"
+        ],
         "no-unused-vars": [
             "error",
             {
