--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^13.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^4.9.0",
     "redux": "^4.2.1",
     "video-react": "^0.16.0"
